Update All (Fix)

--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+   
     <title>A43</title>
 </head>
 <body>
     <header>
       <div class="header-logo">Team A43</div>
      <div class="header-menu">
+        <img class="menu-icon" src="menu.svg">
         <ul>
             <li>About</li>
             <li>Join us</li>
         </ul>
      </div>
+
     </header>
 
     <div class="content-one">
@@ -28,8 +31,53 @@
     </div>
 
     <div class="content-two">
-
+        <h2 class="content-two-title">Our Profile</h2>
+      <div class="profile-panel-wrapper">
+        <div class="profile-panel">
+            <img class="user-icon" src="person.svg">
+            <h2 class="user-name">Abid Fakhri Maulana</h2>
+            <div class="user-desc">"Hey, My name is Abid, i like coding, my dream is to become a programmer"</div>
+            <div class="user-id">User Id : 0447977131-158</div>
+      </div>
+      <div class="profile-panel">
+        <img class="user-icon" src="person.svg">
+        <h2 class="user-name">Aditya Hidayat</h2>
+        <div class="user-desc">"Hey, My name is Adityat, i like coding, my dream is to become a programmer"</div>
+        <div class="user-id">User Id : 0447977281-5</div>
+      </div>
+      <div class="profile-panel">
+        <img class="user-icon" src="person.svg">
+        <h2 class="user-name">Adi Aprilliyanto</h2>
+        <div class="user-desc">"Hey, My name is Adi, i like coding, my dream is to become a programmer"</div>
+        <div class="user-id">User Id : 0447977141-20</div>
+      </div>
+      <div class="profile-panel">
+        <img class="user-icon" src="person.svg">
+        <h2 class="user-name">Akhbar Wahyudianto</h2>
+        <div class="user-desc">"Hey, My name is Akhbar, i like coding, my dream is to become a programmer"</div>
+        <div class="user-id">User Id : 0447977151-48</div>
+      </div>
     </div>
+    </div>
+
+   <div class="content-three">
+       <div class="like-content-wrapper">
+        <div class="like-content part-one">
+            <h1 id="text-one" class="like-text one">Like Our Page!</h1>
+            <img id="thumb" class="thumb" src="like.svg" fill="grey">
+        </div>
+        <div class="like-content part-two">
+            <h2 id="button" class="like-button" onclick="like()">Click Me</h2>
+            <h1 id="text-two" class="like-text two">Thank You</h1>
+        </div>
+    </div>
+   </div>
+
+   <footer>
+     <h3 id="footer-logo" class="footer-logo">
+     </h3>
+   </footer>
 
 </body>
 </html>
+<script src="./script.js" type="text/javascript"></script> 
